--- a/ExpenseTracker/public/css/style.css
+++ b/ExpenseTracker/public/css/style.css
@@ -72,6 +72,13 @@ li {
     margin-top: 0px;
     padding-bottom: 0px;
 }
+
+
+.mycontainer {
+    min-height: 100vh !important; 
+}
+
+
 /* 
   .footer {
     position: absolute;
